--- a/packages.yml
+++ b/packages.yml
@@ -1,6 +1,3 @@
 packages:
-  # - package: dbt-labs/dbt_utils
-  #   version: 0.8.4
-
-  - package: gitlabhq/snowflake_spend
-    version: 1.2.0
+  - package: dbt-labs/dbt_utils
+    version: 0.8.4
